--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,10 @@
 name: CtrlEsc.xyz
 
 # Short bio or description (displayed in the header)
-description: Sec Researcher, Hacker, Engineer.
+description: Sec Researcher and Engineer.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
-#
+avatar: https://raw.githubusercontent.com/jsalinas212/ctrlesc.xyz/main/images/CapsuleCorpSec01.png
 # Flags below are optional
 #
 
