--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: CtrlEsc.xyz
+name: ctrlesc.xyz
 
 # Short bio or description (displayed in the header)
 description: Sec Researcher and Engineer.
@@ -45,7 +45,7 @@ url: https://ctrlesc.xyz
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/ctrlesc.xyz"
+baseurl: ""
 
 #
 # !! You don't need to change any of the configuration flags below !!
