--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: ctrlesc.xyz
 description: Sec Researcher and Engineer.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/jsalinas212/ctrlesc.xyz/main/images/CapsuleCorpSec01.png
+avatar:
 # Flags below are optional
 #
 
