--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: ctrlesc.xyz
 
 # Short bio or description (displayed in the header)
-description: Sec Researcher and Engineer.
+description: // Sec Researcher // Sec Engineer //
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar:
