--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ footer-links:
   facebook:
   flickr:
   github: 
-  instagram:
+  instagram: an0malous_
   linkedin:
   pinterest:
   rss: lol
@@ -51,7 +51,7 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /:categories/:title/
+permalink: /:tags/:title/
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
