--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: ctrlesc.xyz
 
 # Short bio or description (displayed in the header)
-description: // sec researcher // sec engineer //
+description: // sec engineer // sec researcher //
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar:
