--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,8 @@
 
 # Name of your site (displayed in the header)
 name: ctrlesc.xyz
-
 # Short bio or description (displayed in the header)
-description: // sec engineer // sec researcher //
-
+description: // sec engineer // sec researcher // bug hunter // hacker //
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar:
 # Flags below are optional
@@ -19,7 +17,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: 
+  github:
   instagram: an0malous_
   linkedin:
   pinterest:
@@ -28,34 +26,25 @@ footer-links:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
-
-
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
 disqus:
-
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
-
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
 url: https://ctrlesc.xyz
-
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: ""
-
 #
 # !! You don't need to change any of the configuration flags below !!
 #
-
 permalink: /:categories/:title/
-
 # The release of Jekyll Now that you're using
 version: v1.2.0
-
 # Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
   # Use GitHub flavored markdown, including triple backtick fenced code blocks
@@ -64,17 +53,14 @@ kramdown:
   syntax_highlighter: rouge
   syntax_highlighter_opts:
     # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
-
+    css_class: "highlight"
 # Set the Sass partials directory, as we're using @imports
 sass:
   style: :expanded # You might prefer to minify using :compressed
-
 # Use the following plug-ins
 plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
-
 # Exclude these files from your production _site
 exclude:
   - Gemfile
