--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Name of your site (displayed in the header)
 name: ctrlesc.xyz
 # Short bio or description (displayed in the header)
-description: // sec engineer // sec researcher // bug hunter // hacker //
+description: // engineer / researcher / hunter / hacker //
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar:
 # Flags below are optional
